# OSR6

./: .gitattributes  .gitignore  ARCHITECTURE.md  EXPERIMENTS.md  README.md  install.bat  launch_osrgen_gui.bat  pyproject.toml  requirements.txt  run_osrgen.bat
configs/postprocess/: region_all_quality_95.json
configs/presets/: region_hybrid_experience_95.json
models/region_all_profile_95_e20/: l0.pt  l1.pt  l2.pt  r0.pt  r1.pt  r2.pt
src/osrgen/: __init__.py  axes.py  batch_predict.py  cli.py  feature_cache.py  features.py  flow.py  funscript.py  generator.py  gui.py  modeling.py  preset_validation.py  profiles.py  project.py  quality.py  regions.py  tcn.py  video.py
tests/: test_batch_predict.py  test_cli.py  test_feature_cache.py  test_features.py  test_funscript.py  test_gui.py  test_modeling.py  test_predict_smoke.py  test_preset_validation.py  test_regions.py
