[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osrgen"
version = "0.1.0"
description = "Packaged video-to-OSR6 funscript generator with a Windows GUI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
model = [
  "torch>=2.3",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
osrgen = "osrgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
